o(∩∩)o...哈哈，修改了性能测试。

--- a/EffectLab/Makefile
+++ b/EffectLab/Makefile
@@ -1,5 +1,5 @@
 EffectLabCore.so: core.c
-	gcc -I/usr/include/python2.7 -fPIC -shared core.c -o EffectLabCore.so
+	gcc -O2 -I/usr/include/python2.7 -fPIC -shared core.c -o EffectLabCore.so
 
 clean:
 	rm *.so
